<resources>
    <string name="app_name">Oscar Reviews</string>
    <string name="menu_item_prefs_title">Preferences</string>
    <string name="menu_item_view_reviews_title">View Reviews</string>


    <string name="send_review">Submit Review</string>
    <string name="review_hint">Enter review here</string>
    <string name="nominee_hint">Enter nominee here</string>

    <string name="radio_best_picture" value ="film">Best Picture</string>
    <string name="radio_best_actor" value ="actor">Best Actor</string>
    <string name="radio_best_actress" value ="actress">Best Actress</string>
    <string name="radio_film_editing" value ="editing">Film Editing</string>
    <string name="radio_visual_effects" value ="effects">Visual Effects</string>
</resources>
